Modify fast_tss.h and policy.h done

--- a/gomoku/Makefile
+++ b/gomoku/Makefile
@@ -4,6 +4,9 @@ CFLAGS= -Wall -O3 -std=c++11 -D_UNIX_SLEEP -D_UNIX
 all:
 	g++ -O3 main.cpp -o mcts-gomoku -std=c++11
 
+test_policy: test_policy.cpp fast_tss.h pattern.h policy.h
+	$(CC) $(CFLAGS) -D_DEBUG_POLICY  test_policy.cpp -o $@
+
 test_fast_tss: test_fast_tss.cpp fast_tss.h pattern.h
 	$(CC) $(CFLAGS) -D_LOG_FAST_TSS test_fast_tss.cpp -o $@
 
