--- a/gomoku/Makefile
+++ b/gomoku/Makefile
@@ -8,7 +8,7 @@ test_policy: test_policy.cpp fast_tss.h pattern.h policy.h
 	$(CC) $(CFLAGS) -D_DEBUG_POLICY  test_policy.cpp -o $@
 
 test_fast_tss: test_fast_tss.cpp fast_tss.h pattern.h
-	$(CC) $(CFLAGS) -D_LOG_FAST_TSS test_fast_tss.cpp -o $@
+	$(CC) $(CFLAGS) -D_LOG_FAST_TSS -D_DEBUG_FAST_TSS test_fast_tss.cpp -o $@
 
 test_tss: test_tss.cpp tss.h pattern.h
 	$(CC) $(CFLAGS) -DDFS_TSS test_tss.cpp -o $@
