--- a/gomoku/Makefile
+++ b/gomoku/Makefile
@@ -5,7 +5,7 @@ all:
 	g++ -O3 main.cpp -o mcts-gomoku -std=c++11
 
 test_policy: test_policy.cpp fast_tss.h pattern.h policy.h
-	$(CC) $(CFLAGS) -D_DEBUG_POLICY -D_LOG_FAST_TSS  test_policy.cpp -o $@
+	$(CC) $(CFLAGS) -D_DEBUG_POLICY test_policy.cpp -o $@
 
 test_fast_tss: test_fast_tss.cpp fast_tss.h pattern.h
 	$(CC) $(CFLAGS) -D_LOG_FAST_TSS test_fast_tss.cpp -o $@
