Add move_approach policy

--- a/gomoku/Makefile
+++ b/gomoku/Makefile
@@ -1,17 +1,20 @@
 CC=g++
-CFLAGS = -Wall -O3 -std=c++11 -D_UNIX_SLEEP -D_UNIX
+CFLAGS = -Wall -O3 -std=c++11 -D_UNIX_SLEEP -D_UNIX -D_DEBUG_MCTS -D_LOG_FAST_TSS
+#CFLAGS += -fopenmp
 
-all:
-	g++ -O3 main.cpp -o mcts-gomoku -std=c++11
+OBJS = state.o policy.o fast_tss.o pattern.o board.o util.o simulation.o simulation_usual.o sim.o
+
+all: $(OBJS)
+	g++ $(CFLAGS) main.cpp $(OBJS) -o mcts-gomoku -std=c++11
 
 test_util: test_util.cpp util.h state.h
 	$(CC) $(CFLAGS) -D_DEBUG_UTIL test_util.cpp -o $@
 
-test_sim: test_sim.cpp fast_tss.h pattern.h policy.h sim.h util.h
-	$(CC) $(CFLAGS)  test_sim.cpp -o $@
+test_sim:
+	$(CC) $(CFLAGS) test_sim.cpp util.cpp board.cpp sim.cpp policy.cpp state.cpp pattern.cpp fast_tss.cpp simulation.cpp simulation_usual.cpp $< -o $@
 
-test_policy: test_policy.cpp fast_tss.h pattern.h policy.h
-	$(CC) $(CFLAGS)  -D_DEBUG_POLICY test_policy.cpp -o $@
+test_policy: fast_tss.o pattern.o policy.o util.o
+	$(CC) $(CFLAGS)  -D_DEBUG_POLICY test_policy.cpp $< -o $@
 
 test_fast_tss: test_fast_tss.cpp fast_tss.h pattern.h
 	$(CC) $(CFLAGS) -D_LOG_FAST_TSS test_fast_tss.cpp -o $@
@@ -27,3 +30,6 @@ test_board: test_board.cpp board.h
 
 %.o: %.cpp
 	$(CC) $(CFLAGS) -c $< -o $@
+
+clean:
+	rm *.o
