--- a/gomoku/Makefile
+++ b/gomoku/Makefile
@@ -1,5 +1,9 @@
 CC = g++
-CFLAGS = -Wall -O3 -std=c++11 -D_UNIX_SLEEP -D_UNIX
+CFLAGS = -Wall -std=c++11 -D_UNIX_SLEEP -D_UNIX
+CFLAGS += -O3
+#CFLAGS += -g
+#CFLAGS += -D_LOG_FAST_TSS -D_DEBUG_FAST_TSS
+#CFLAGS += -D_LOG_POLICY
 OBJS = state.o policy.o fast_tss.o pattern.o board.o util.o simulation.o simulation_usual.o sim.o
 
 OPT :=
@@ -20,11 +24,11 @@ test_util: test_util.cpp util.h state.h
 test_sim:
 	$(CC) $(CFLAGS) -O3 test_sim.cpp util.cpp board.cpp sim.cpp policy.cpp state.cpp pattern.cpp fast_tss.cpp simulation.cpp simulation_usual.cpp $< -o $@
 
-test_policy: fast_tss.o pattern.o policy.o util.o
-	$(CC) $(CFLAGS) -O3 -D_DEBUG_POLICY test_policy.cpp $< -o $@
+test_policy: $(OBJS)
+	$(CC) $(CFLAGS) test_policy.cpp $(OBJS) -o $@
 
-test_fast_tss: $(OBJS)
-	$(CC) $(CFLAGS) -O3 -D_LOG_FAST_TSS test_fast_tss.cpp $(OBJS) -o $@
+test_fast_tss: $(OBJS) test_fast_tss.cpp
+	$(CC) $(CFLAGS) -O3 test_fast_tss.cpp $(OBJS) -o $@
 
 test_tss: test_tss.cpp tss.h pattern.h
 	$(CC) $(CFLAGS) -O3 -DDFS_TSS test_tss.cpp -o $@
